# nvds_realtime_pipeline

./: .gitignore  CMakeLists.txt  Makefile  README.md  conf_infer_primary_yolov10n.txt  conf_inver_primary_yolov10n.txt  main_pipeline.cpp
include/: pipeline.h
plugins/: CMakeLists.txt  parse_custom_bbox.cpp
src/: main.cpp  main_pipeline.cpp  pipeline.cpp
